# rsc

./: CLAUDE.md  README.md  __init__.py  design.md  pyproject.toml  pyrightconfig.json
examples/: run_loop.py
rsc/: __init__.py  artifact_protocol.py  chat_store.py  config.py  context_manager.py  contracts.py  document_converter.py  evaluator.py  exceptions.py  local_search_provider.py  loop_orchestrator.py  observability.py  openai_responses_adapter.py  openrouter_adapter.py  prompt_assembler.py  retry.py  role_agent.py  role_search_planner.py  runtime.py  search_inference.py  search_provider.py  skill_runtime.py  state_loader.py  state_manager.py  vector_index.py  web_api.py
skills/about-computer/: SKILL.md
skills/accounting/: SKILL.md
skills/coding/: SKILL.md
skills/create-skill/: SKILL.md
skills/custom-credentials/: SKILL.md
skills/custom-notifications/: SKILL.md
skills/cx/: SKILL.md
skills/data/: SKILL.md
skills/design-foundations/: SKILL.md
skills/document-review/: SKILL.md
skills/entity-search/: SKILL.md
skills/explore-past-context/: OWNERS.yaml  SKILL.md
skills/finance/: SKILL.md
skills/goal-mode/: SKILL.md
skills/image-output-director/: SKILL.md
skills/legal/: SKILL.md
state/: artifact_state.json  claude.md  memory.md  memory_ledger.json
tests/: conftest.py  test_components.py  test_context_manager.py  test_live_pipeline.py  test_local_context.py  test_loop_orchestrator.py  test_role_search_planner.py  test_search_provider.py  test_web_api.py
ui/: index.html  package-lock.json  package.json  tsconfig.json  vite.config.ts
(+364 files in other folders)
