[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "rsc"
version = "2.2.0"
description = "Recursive Scaffolded Cognition - Python orchestration harness"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.115.0",
    "openai>=1.30.0",
    "pypdf>=5.0.0",
    "python-docx>=1.1.0",
    "python-multipart>=0.0.12",
    "pydantic>=2.7.0,<3.0.0",
    "pyyaml>=6.0.1",
    "tiktoken>=0.7.0",
    "uvicorn[standard]>=0.30.0",
    "portalocker>=2.8.2",
]

[project.optional-dependencies]
embedder = ["numpy>=1.26.0"]
openrouter = ["openrouter"]
dev = [
    "httpx>=0.27.0",
    "pytest>=8.2.0",
    "pytest-cov>=5.0.0",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_functions = ["test_*"]
addopts = "--tb=short"
markers = [
    "live: tests that call external paid/live services such as OpenRouter and Firecrawl",
]

[tool.hatch.build.targets.wheel]
packages = ["rsc"]